Support JDK 19 virtual threads (Project Loom) natively.