@@ -24,14 +24,10 @@
  */
 package com.oracle.svm.core.thread;
 
-import java.util.concurrent.ForkJoinPool;
-
 import org.graalvm.compiler.serviceprovider.JavaVersionUtil;
 import org.graalvm.nativeimage.ImageSingletons;
-import org.graalvm.nativeimage.Platform;
-import org.graalvm.nativeimage.Platforms;
 import org.graalvm.nativeimage.hosted.Feature;
-import org.graalvm.nativeimage.hosted.RuntimeReflection;
+import org.graalvm.nativeimage.hosted.RuntimeClassInitialization;
 
 import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.annotate.AutomaticFeature;
@@ -43,27 +39,30 @@ import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.util.ReflectionUtil;
 
 @AutomaticFeature
-@Platforms(Platform.HOSTED_ONLY.class)
 public class ContinuationsFeature implements Feature {
     @Override
     public void afterRegistration(AfterRegistrationAccess access) {
-        if (Continuation.isSupported()) {
-            VirtualThreads impl;
-            if (LoomSupport.isEnabled()) {
-                VMError.guarantee(JavaVersionUtil.JAVA_SPEC >= 19);
-                impl = new LoomVirtualThreads();
-            } else if (JavaVersionUtil.JAVA_SPEC == 17) {
-                /*
-                 * GR-37518: ForkJoinPool on 11 syncs on a String which doesn't have its own monitor
-                 * field, and unparking a virtual thread in additionalMonitorsLock.unlock causes a
-                 * deadlock between carrier thread and virtual thread. 17 uses a ReentrantLock.
-                 */
-                impl = new SubstrateVirtualThreads();
-            } else {
-                throw UserError.abort("Continuations are currently supported only on JDK 17 with option %s, or on JDK 19 with preview features enabled.",
-                                SubstrateOptionsParser.commandArgument(SubstrateOptions.SupportContinuations, "+"));
+        if (!Continuation.isSupported()) {
+            if (JavaVersionUtil.JAVA_SPEC >= 19) {
+                // Can still get initialized and fail the image build despite substitution, so defer
+                RuntimeClassInitialization.initializeAtRunTime("jdk.internal.vm.Continuation");
             }
-            ImageSingletons.add(VirtualThreads.class, impl);
+            return;
+        }
+
+        if (LoomSupport.isEnabled()) {
+            VMError.guarantee(JavaVersionUtil.JAVA_SPEC >= 19);
+            ImageSingletons.add(VirtualThreads.class, new LoomVirtualThreads());
+        } else if (JavaVersionUtil.JAVA_SPEC == 17) {
+            /*
+             * GR-37518: ForkJoinPool on 11 syncs on a String which doesn't have its own monitor
+             * field, and unparking a virtual thread in additionalMonitorsLock.unlock causes a
+             * deadlock between carrier thread and virtual thread. 17 uses a ReentrantLock.
+             */
+            ImageSingletons.add(VirtualThreads.class, new SubstrateVirtualThreads());
+        } else {
+            throw UserError.abort("Continuations are currently supported only on JDK 17 with option %s, or on JDK 19 with preview features enabled (-J--enable-preview).",
+                            SubstrateOptionsParser.commandArgument(SubstrateOptions.SupportContinuations, "+"));
         }
     }
 
@@ -76,10 +75,6 @@ public class ContinuationsFeature implements Feature {
 
             access.registerReachabilityHandler(a -> access.registerAsInHeap(StoredContinuation.class),
                             ReflectionUtil.lookupMethod(StoredContinuationAccess.class, "allocate", int.class));
-
-            if (LoomSupport.isEnabled()) {
-                RuntimeReflection.register(ReflectionUtil.lookupMethod(ForkJoinPool.class, "compensatedBlock", ForkJoinPool.ManagedBlocker.class));
-            }
         } else {
             access.registerReachabilityHandler(a -> abortIfUnsupported(), StoredContinuationAccess.class);
         }
